--- a/src/app/product-description/product-description.component.css
+++ b/src/app/product-description/product-description.component.css
@@ -1,9 +1,9 @@
-.col-sm-6 > p {
+p {
     font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     font-weight: normal;
 }
 
-.col-sm-2 > img {
+img {
     width: 100%;
 }
